--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>codelân <span>{ )</span> ia</h1>
-            <!-- 
+            <!-- (manu alternativo)
             <div class="menu-section on">
                 <div class="menu-toggle">
                     <div class="one1"></div>
