atualização de projeto4 demo

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <div class="conteiner">
 
-                    <img src="img/Vector.png" alt="">
+                    <img src="img/projeto_codelandia.PNG" alt="img da demo site informativo">
                     <div class="fundo">
                     </div>
                     <h3>Nome do projeto 4</h3>
@@ -95,10 +95,11 @@
                     
                     <div class="btns"> 
                             <div >
-                                <button class="btn1">demo</button>
+                               <a href="https://eduardo074.github.io/Codelandia/" target="_blank" rel="external"> <button class="btn1">demo</button> </a>
                             </div>
                             <div>
-                                <button class="btn2">github</button>
+                                <a href="https://github.com/eduardo074/comunidade_codelandia" target="_blank" rel="external"> <button class="btn2">github</button>
+                                </a>
                             </div>
                     </div>     
                 </div>    
